[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scenes/MazeSelector.gd" type="Script" id=1]

[node name="VBoxContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
rows = 8
columns = 8

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 44.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 37.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1005.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 34.0
margin_bottom = 17.0
text = "View:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewSelect" type="OptionButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 38.0
margin_right = 67.0
margin_bottom = 20.0

[node name="AlgorithmLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 71.0
margin_top = 3.0
margin_right = 138.0
margin_bottom = 17.0
text = "Algorithm:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlgorithmSelect" type="OptionButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 142.0
margin_right = 171.0
margin_bottom = 20.0

[node name="SizeLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 175.0
margin_top = 3.0
margin_right = 205.0
margin_bottom = 17.0
text = "Size:"

[node name="RowsTextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 209.0
margin_right = 239.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 0 )
text = "16"

[node name="x" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 243.0
margin_top = 3.0
margin_right = 250.0
margin_bottom = 17.0
text = "x"

[node name="ColumnsTextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 254.0
margin_right = 284.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 0 )
text = "16"

[node name="NewMazeButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 288.0
margin_right = 366.0
margin_bottom = 20.0
text = "New Maze"

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 1072.0
rect_min_size = Vector2( 1024, 1024 )
input_pass_on_modal_close_click = false
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 1024 )
handle_input_locally = false
render_target_update_mode = 3

[connection signal="item_selected" from="PanelContainer/MarginContainer/HBoxContainer/ViewSelect" to="." method="_on_MazeSelect_item_selected"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/HBoxContainer/AlgorithmSelect" to="." method="_on_AlgorithmSelect_item_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/NewMazeButton" to="." method="_on_NewMazeButton_pressed"]
